# ftservo_sdk-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic_control.rs  scscl_control.rs  status_monitor.rs  sync_control.rs
src/: group_sync_read.rs  group_sync_write.rs  inst.rs  lib.rs  main.rs  port_handler.rs  protocol_packet_handler.rs  scs.rs  scsci.rs  scscl.rs  scserial.rs  scservo_def.rs  sms_sts.rs
src/scservo/: mod.rs  scscl.rs  smsbl.rs  smscl.rs  smssts.rs
