[package]
categories = ["robotics", "control_motor"]
name = "ftservo_sdk"
version = "0.1.0"
edition = "2024"
authors = ["BriceLucifer <2376671337@qq.com>"]
description = "a Rust library for controlling FTServo devices"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BriceLucifer/ftservo_sdk"
keywords = ["ftservo_sdk", "lerobot"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
serialport = "4.7.1"
