[package]
name = "ftservo_sdk"
version = "0.1.0"
edition = "2021"
authors = ["BriceLucifer <2376671337@qq.com>"]
description = "A Rust library for controlling FTServo devices"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BriceLucifer/ftservo_sdk"
keywords = ["ftservo", "servo", "robotics", "motor-control"]
categories = ["robotics", "hardware-support"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
serialport = "4.7.1"
thiserror = "1.0"

# 示例程序
[[example]]
name = "basic_control"
path = "examples/basic_control.rs"

[[example]]
name = "sync_control"
path = "examples/sync_control.rs"

[[example]]
name = "scscl_control"
path = "examples/scscl_control.rs"

[[example]]
name = "status_monitor"
path = "examples/status_monitor.rs"

[[example]]
name = "read_status"
path = "examples/read_status.rs"